--- a/app/src/main/res/layout/activity_8.xml
+++ b/app/src/main/res/layout/activity_8.xml
@@ -28,11 +28,10 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/nestedlayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
+        android:layout_width="416dp"
+        android:layout_height="481dp"
         app:layout_constraintTop_toBottomOf="@+id/viewAct8"
-        tools:layout_editor_absoluteX="0dp">
+        tools:layout_editor_absoluteX="-5dp">
 
         <Button
             android:id="@+id/button"
@@ -49,8 +48,8 @@
 
         <ScrollView
             android:id="@+id/scrollView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="417dp"
+            android:layout_height="372dp"
             android:fillViewport="false"
             android:padding="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
